force-app/main/default/objects/Incident_IOT__c/Incident_IOT__c.object-meta.xml
<CustomObject>
    <label>Incident_IOT</label>
    <nameField>
        <label>Incident_IOT_Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incidents_IOT</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>